Fix back button display

--- a/style.css
+++ b/style.css
@@ -528,7 +528,7 @@ body .options .option .label .info .sub {
 }
 
 button {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   display: flex;
